--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ variables:
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
   solution:  '**/RoundTheCode.AzureTestProject.sln'
-  project: '**/RoundTheCode.AzureTestProject.c$proj'
+  project: '**/RoundTheCode.AzureTestProject.csproj'
 
 steps:
 - task: NuGetToolInstaller@1
